--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       }
 
       nav {
-        display: none; /* Initially hide the navigation bar */
+        display: none;
         justify-content: center;
         background-color: #555;
         padding: 10px;
@@ -52,8 +52,8 @@
 
     <nav id="nav">
       <a href="blog.html">Blogs</a>
-      <a href="page2.html">Scans</a>
-      <a href="page3.html">Users</a>
+      <a href="scans.html">Scans</a>
+      <a href="users.html">Users</a>
       <!-- Add more links as needed -->
     </nav>
 
