--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog Posts</title>
     <link rel="stylesheet" href="styles.css" />
+   
+
   </head>
 
   <body>
@@ -25,7 +27,7 @@
             <th>Status</th>
             <th>Category</th>
             <th>Blog URL</th>
-            <th id="'img-url">Image URL</th>
+            <th id="img-url">Image URL</th>
             <th>Image</th>
             <th>File Upload</th>
             <th>Action</th>
@@ -78,15 +80,18 @@
                     <td contenteditable>${post.heading}</td>
                     <td contenteditable>${formattedDate}</td>
                     <td contenteditable>${post.tags}</td>
-                    <td contenteditable>${post.content}</td>
+                    <!-- <td contenteditable>${post.content}</td> -->
+                    <td contenteditable>
+                      <button id="content-btn" onclick="navigateToContentPage(${post.id})">Read me</button>
+                    </td>
                     <td contenteditable>${post.status}</td>
                     <td contenteditable>${post.category}</td>
-                    <td contenteditable>${post.blog}</td>
+                    <td contenteditable>${post.url}</td>
                     <td contenteditable>${post.image}</td>
                     <td><img src="${post.image}" alt="Post Image" style="max-width: 100px; max-height: 100px;"></td>
                     <td class="file-upload">
-                        <input type="file" class="file-input" accept="image/*" onchange="handleFileChange(event, ${post.id})" style="display: none;">
-                        <button class="file-upload-btn" onclick="document.querySelector('.file-input').click()">Upload</button>
+                        <input type="file" class="file-input" id="fileInput_${post.id}" data-post-id="${post.id}" accept="image/*" onchange="uploadFile(event, ${post.id})" style="display: none;">
+                        <button class="file-upload-btn" onclick="document.getElementById('fileInput_${post.id}').click()">Upload</button>
                     </td>
                     <td><button onclick="updatePost(${post.id})">Update</button></td>
                 `;
@@ -135,7 +140,10 @@
         const content =
           rowToUpdate.querySelector("td:nth-child(6)").textContent;
         const status = rowToUpdate.querySelector("td:nth-child(7)").textContent;
-        const image = rowToUpdate.querySelector("td:nth-child(8)").textContent;
+        const image = rowToUpdate.querySelector("td:nth-child(10)").textContent;
+        const category =
+          rowToUpdate.querySelector("td:nth-child(8)").textContent;
+        const url = rowToUpdate.querySelector("td:nth-child(9)").textContent;
 
         // Create an object with the updated data
         const postData = {
@@ -147,6 +155,8 @@
           content,
           status,
           image,
+          category,
+          url,
         };
 
         console.log(postData);
@@ -217,23 +227,27 @@
 
       // Function to handle file change
       function handleFileChange(event, postId) {
+        console.log("handleFileChange");
         const fileInput = event.target;
         const uploadButton = fileInput.nextElementSibling;
 
-        // Show the upload button only when a file is selected
-        if (fileInput.files.length > 0) {
-          uploadButton.style.display = "block";
-        } else {
-          uploadButton.style.display = "none";
-        }
+        // // Show the upload button only when a file is selected
+        // if (fileInput.files.length > 0) {
+        //   uploadButton.style.display = "block";
+        // } else {
+        //   uploadButton.style.display = "none";
+        // }
       }
 
       /// Function to upload the file to imgbb.com
-      function uploadFile(postId) {
-        const fileInput = document.querySelector(
-          `#blogTable tr[data-id="${postId}"] .file-input`
-        );
+      function uploadFile(event, postId) {
+        console.log("upload file w post id : ", postId);
+        console.log("upload file w event : ", event);
+
+        const fileInput = event.target;
         const file = fileInput.files[0];
+
+        console.log("File selected:", file);
 
         if (file) {
           const formData = new FormData();
@@ -248,9 +262,21 @@
           )
             .then((response) => response.json())
             .then((data) => {
-              // Handle the response from imgbb.com, you can store the URL or use it as needed
               console.log("Image upload response:", data);
-              alert("Image Uploaded Successfully");
+              console.log("Image Uploaded Successfully");
+
+              const tableBody = document.querySelector("#blogTable tbody");
+              const rowToUpdate = Array.from(tableBody.children).find((row) => {
+                const idCell = row.querySelector("td:nth-child(1)");
+                return idCell.textContent == postId;
+              });
+              console.log("Image url:", data.data.url);
+
+              const imageCell = rowToUpdate.querySelector("td:nth-child(10)");
+              imageCell.innerHTML = `${data.data.url}`;
+
+              const imageCell2 = rowToUpdate.querySelector("td:nth-child(11)");
+              imageCell2.innerHTML = `<img src="${data.data.url}" alt="Post Image" style="max-width: 100px; max-height: 100px;">`;
             })
             .catch((error) => {
               console.error("Error uploading image:", error);
@@ -258,6 +284,11 @@
         } else {
           alert("Please select an image to upload.");
         }
+      }
+
+      function navigateToContentPage(postId) {
+        // console.log(postId);
+        window.location.href = `content.html?postId=${postId}`;
       }
 
       // Call the fetchData function when the page loads
