--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
     <nav id="nav">
       <a href="blog.html">Blogs</a>
+      <a href="blogRules.html">Blogs Rules</a>
+
       <a href="scans.html">Scans</a>
       <a href="users.html">Users</a>
       <!-- Add more links as needed -->
