--- a/users.html
+++ b/users.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f4f4;
+      background-color: #ffffff;
       margin: 0;
       padding: 0;
       display: flex;
