--- a/Blogrules/blogRules.html
+++ b/Blogrules/blogRules.html
@@ -4,32 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Steps Table with Styling</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-      }
-
-      table {
-        width: 80%;
-        border-collapse: collapse;
-        margin: 20px auto;
-      }
-
-      th,
-      td {
-        border: 1px solid #ddd;
-        padding: 12px;
-        text-align: left;
-      }
-
-      th {
-        background-color: #f2f2f2;
-      }
-
-      tr:nth-child(even) {
-        background-color: #f9f9f9;
-      }
-    </style>
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
     <h1>Blog Rules</h1>
