--- a/Blogrules/blogRules.html
+++ b/Blogrules/blogRules.html
@@ -39,6 +39,19 @@
           <td>Blog Sub Headings ( using **heading** )</td>
           <td>[Para_1] [**Heading_text**] [Para_2]</td>
         </tr>
+
+        <tr>
+          <td>5</td>
+          <td>Blog Status </td>
+          <td>Only Blog with status 1 will show on website blog page</td>
+        </tr>
+
+        <tr>
+          <td>6</td>
+          <td>Blog Sequence </td>
+          <td>Blogs w higher sequence will show on priority</td>
+        </tr>
+
       </tbody>
     </table>
   </body>
