Added TXN and users module

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
       <a href="./Scans/scans.html">Scans</a>
       <a href="./Users/users.html">Users</a>
+      <a href="./TXN/txn.html">TXN</a>
       <!-- Add more links as needed -->
     </nav>
 
