--- a/Users/users.html
+++ b/Users/users.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Users Module</title>
-   <link rel="stylesheet" href="./styles.css">
-      
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>User Data Table</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-  <body>
-    <header id="header">
-      <h1>Users Module</h1>
-    </header>
+  <div id="header">
+    <h1>User Data Table</h1>
+  </div>
 
-    <div id="usersModule">
-      <table>
-        <thead>
-          <tr>
-            <th>Email</th>
-            <th>Signup Date</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>abc@gmail.com</td>
-            <td>2024-01-10</td>
-          </tr>
-          <tr>
-            <td>pqr@gmail.com</td>
-            <td>2024-01-15</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </body>
+  <div id="tableContainer">
+    <table id="userData">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Email</th>
+          <th>OTP</th>
+          <th>Plan</th>
+          <th>Credit</th>
+          <th>Referred Credit</th>
+          <th>Status</th>
+          <th>OTP Time</th>
+          <th>Plan Expiry</th>
+          <th>Created On</th>
+          <th>Modified On</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <script src="users.js"></script>
+
+</body>
 </html>
