--- a/Blogrules/blogRules.html
+++ b/Blogrules/blogRules.html
@@ -52,6 +52,12 @@
           <td>Blogs w higher sequence will show on priority</td>
         </tr>
 
+         <tr>
+          <td>7</td>
+          <td>Blog Url </td>
+          <td>In small case only separated by "-"</td>
+        </tr>
+
       </tbody>
     </table>
   </body>
