--- a/Blogrules/blogRules.html
+++ b/Blogrules/blogRules.html
@@ -58,6 +58,12 @@
           <td>In small case only separated by "-"</td>
         </tr>
 
+        <tr>
+          <td>7</td>
+          <td>No Double Quotes Anywhere </td>
+          <td>Don't use double quotes</td>
+        </tr>
+
       </tbody>
     </table>
   </body>
