--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <a href="./Scans/scans.html">Scans</a>
       <a href="./Users/users.html">Users</a>
       <a href="./TXN/txn.html">TXN</a>
+      <a href="./securewatch/securewatch.html">SecureWatch</a>
+
       <!-- Add more links as needed -->
     </nav>
 
